cleaned up inconsistencies bw div and ul tags

--- a/index.html
+++ b/index.html
@@ -17,69 +17,67 @@
 <div class="info">
   <p>This is a trivia game about elephants. You'll be presented with one question at a time, and will need to answer in order to move on to the next.
   <p id="important">When you're ready to get started, click the image of the elephant above!</p>
-  <p>If you want more information on the source used, I recommend checking out <a href="http://www.elephantnaturepark.com">Elephant Nature Park</a>.  ENP is an santuary for elephants, as well as dogs, cats and water buffalo, just north of  Chiang Mai, Thailand.  It was founded by Lek Chailert.
+  <p>If you want more information on the source used, I recommend checking out <a href="http://www.elephantnaturepark.com">Elephant Nature Park</a>.  ENP is an santuary for elephants, as well as dogs, cats and water buffalo, located in Thailand, just north of  Chiang Mai.  It was founded by Lek Chailert.
 </div>
 
 
 
 <div class="gameTime">
   <table>
-    <tr id="1">
+    <tr class="question">
       <td><img src="DSC00540.jpg"/></td>
-      <td class="question">Q: How much food does/can one adult elephant consume in one day?
-        <ul class="answerOptions">
+      <td>Q: How much food does/can one adult elephant consume in one day?
           <ul class="correctAnswer">a lot!</ul>
           <ul> 24 pounds</ul>
     </td></tr>
 
-    <tr id="2">
-      <td class="question">Question two
-        <ul class="answerOptions">
+    <tr class="question">
+      <td>Question two
           <ul class="correctAnswer">a lot!</ul>
-          <ul> 24 pounds</ul>
+          <ul class="otherAnswer"> 24 pounds</ul>
       <td><img src="DSC00611.jpg"/></td>
     </td></tr>
 
-    <tr id="3">
-      <td class="question">Question three
-      <div class="correctAnswer">i like what you're thinkin'</div>
-      <div>no. just no</div>
+    <tr class="question">
+      <td>Question three
+      <ul class="correctAnswer">i like what you're thinkin'</ul>
+      <ul class="otherAnswer">no. just no</ul>
     </td></tr>
 
-    <tr id="4">
-      <td class="question">Question four
-      <div class="correctAnswer">you're smart</div>
-      <div>no comment</div>
+    <tr class="question">
+      <td>Question four
+      <ul class="correctAnswer">you're smart</ul>
+      <ul class="otherAnswer">no comment</ul>
       </td></tr>
 
-    <tr id="5">
-      <td class="question">Question five
-      <div class="correctAnswer">you're smart</div>
-      <div>no comment</div>
+    <tr class="question">
+      <td>Question five
+      <ul class="correctAnswer">you're smart</ul>
+      <ul class="otherAnswer">no comment</ul>
       </td></tr>
 
-    <tr id="6">
-      <td class="question">Question six
-      <div class="correctAnswer">you're smart</div>
-      <div>no comment</div>
+    <tr class="question">
+      <td>Question six
+      <ul class="correctAnswer">you're smart</ul>
+      <ul class="otherAnswer">no comment</ul>
       </td></tr>
 
-    <tr id="7">
-      <td class="question">Question seven
-      <div class="correctAnswer">you're smart</div>
-      <div>no comment</div>
+    <tr class="question">
+      <td>Question seven
+      <ul class="correctAnswer">you're smart</ul>
+      <ul class="otherAnswer">no comment</ul>
       </td></tr>
 
-    <tr id="8">
-      <td class="question">Question eight
-      <div class="correctAnswer">you're smart</div>
-      <div>no comment</div>
+    <tr class="question">
+      <td>Question eight
+      <ul class="correctAnswer">you're smart</ul>
+      <ul class="otherAnswer">no comment</ul>
       </td></tr>
 
-    <tr id="9">
-      <td class="question">Question nine
-      <div class="correctAnswer">you're smart</div>
-      <div>no comment</div>
+    <tr class="question">
+      <td>Question nine
+      <ul class="correctAnswer">you're smart</ul>
+      <ul class="otherAnswer">no comment</ul>
       </td></tr>
 </div>
 
