added q&a content and photos

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="info">
   <p>This is a trivia game about elephants. You'll be presented with one question at a time, and will need to answer in order to move on to the next.
   <p id="important">When you're ready to get started, click the image of the elephant above!</p>
-  <p>If you want more information on the source used, I recommend checking out <a href="http://www.elephantnaturepark.com">Elephant Nature Park</a>.  ENP is an santuary for elephants, as well as dogs, cats and water buffalo, located in Thailand, just north of  Chiang Mai.  It was founded by Lek Chailert.
+  <p>If these facts strike your fancy, I recommend checking out <a href="http://www.elephantnaturepark.org">Elephant Nature Park</a>.  Just north of Chiang Mai in Thailand, ENP is an santuary for elephants, founded by Lek Chailert, who rescues elephants in need and provides them a safe haven where they are able to live out their lives free of any work (including tourist rides) and abuse. ENP is also home to dogs, cats and water buffalo.
 </div>
 
 
@@ -27,58 +27,68 @@
     <tr class="question">
       <td><img src="DSC00540.jpg"/></td>
       <td>Q: How much food does/can one adult elephant consume in one day?
-          <ul class="correctAnswer">a lot!</ul>
-          <ul> 24 pounds</ul>
+          <ul class="otherAnswer">300+ kg (661&lt lbs)</ul>
+          <ul class="correctAnswer">150-300 kg (330-661 lbs)</ul>
+          <ul class="otherAnswer">less than 150 kg (&lt330 lbs)</ul>
     </td></tr>
 
     <tr class="question">
-      <td>Question two
-          <ul class="correctAnswer">a lot!</ul>
-          <ul class="otherAnswer"> 24 pounds</ul>
+      <td>How long does an elephant pregnancy last?
+        <radio class="otherAnswer">1 year 6 months months.</ul>
+        <ul class="otherAnswer">nine months.</ul>
+        <ul class="correctAnswer">two years.</ul>
+        <ul class="otherAnswer">twelve months.</ul>
+      <td><img src="IMG_0075.jpg"/></td>
+    </td></tr>
+
+    <tr class="question">
+      <td><img src="IMG_0099.JPG"/></td>
+      <td>A mahout is:
+        <ul class="correctAnswer">An elephant trainer, who is often times with the elephant from a very early age and for their whole lives/ul>
+        <ul class="otherAnswer">A call that elephants make to one another to communicate.</ul>
+        <ul class="otherAnswer">A young elephant.</ul>
+    </td></tr>
+
+    <tr class="question">
+      <td>What is a sign of elephant happiness?
+        <ul class="correctAnswer">Trunks up</ul>
+        <ul class="otherAnswer">Wagging their tail</ul>
       <td><img src="DSC00611.jpg"/></td>
-    </td></tr>
-
-    <tr class="question">
-      <td>Question three
-      <ul class="correctAnswer">i like what you're thinkin'</ul>
-      <ul class="otherAnswer">no. just no</ul>
-    </td></tr>
-
-    <tr class="question">
-      <td>Question four
-      <ul class="correctAnswer">you're smart</ul>
-      <ul class="otherAnswer">no comment</ul>
       </td></tr>
 
     <tr class="question">
-      <td>Question five
-      <ul class="correctAnswer">you're smart</ul>
-      <ul class="otherAnswer">no comment</ul>
+      <td><img src="IMG_00251.jpg"/></td>
+      <td>When elephants are stolen from the wild, they often end up:
+        <ul class="otherAnswer">at a logging camp.</ul>
+        <ul class="otherAnswer">at a tourist camp providing rides on their backs.</ul>
+        <ul class="otherAnswer">begging on the street for their mahout.</ul>
+        <ul class="otherAnswer">at a circus.</ul>
+        <ul class="correctAnswer">Any of the above.</ul>
+      </td></tr>
+
+    <!-- <tr class="question">
+      <td>Question six placeholder
+        <ul class="correctAnswer">correct answer placeholder</ul>
+        <ul class="otherAnswer">wrong answer placeholder</ul>
       </td></tr>
 
     <tr class="question">
-      <td>Question six
-      <ul class="correctAnswer">you're smart</ul>
-      <ul class="otherAnswer">no comment</ul>
+      <td>Question seven placeholder
+        <ul class="correctAnswer">correct answer placeholder</ul>
+        <ul class="otherAnswer">wrong answer placeholder</ul>
       </td></tr>
 
     <tr class="question">
-      <td>Question seven
-      <ul class="correctAnswer">you're smart</ul>
-      <ul class="otherAnswer">no comment</ul>
+      <td>Question eight placeholder
+        <ul class="correctAnswer">correct answer placeholder</ul>
+        <ul class="otherAnswer">wrong answer placeholder</ul>
       </td></tr>
 
     <tr class="question">
-      <td>Question eight
-      <ul class="correctAnswer">you're smart</ul>
-      <ul class="otherAnswer">no comment</ul>
-      </td></tr>
-
-    <tr class="question">
-      <td>Question nine
-      <ul class="correctAnswer">you're smart</ul>
-      <ul class="otherAnswer">no comment</ul>
-      </td></tr>
+      <td>Question nine placeholder
+        <ul class="correctAnswer">correct answer placeholder</ul>
+        <ul class="otherAnswer">wrong answer placeholder</ul>
+      </td></tr> -->
 </div>
 
 
