--- a/index.html
+++ b/index.html
@@ -27,42 +27,44 @@
     <tr class="question">
       <td><img src="DSC00540.jpg"/></td>
       <td>Q: How much food does/can one adult elephant consume in one day?
-          <ul class="otherAnswer">300+ kg (661&lt lbs)</ul>
-          <ul class="correctAnswer">150-300 kg (330-661 lbs)</ul>
-          <ul class="otherAnswer">less than 150 kg (&lt330 lbs)</ul>
+          <ul class="otherAnswer">300+ kg (661&lt lbs).</ul>
+          <ul class="correctAnswer">150-300 kg (330-661 lbs).</ul>
+          <ul class="otherAnswer">Less than 150 kg (&lt330 lbs).</ul>
     </td></tr>
 
     <tr class="question">
-      <td>How long does an elephant pregnancy last?
-        <radio class="otherAnswer">1 year 6 months months.</ul>
-        <ul class="otherAnswer">nine months.</ul>
-        <ul class="correctAnswer">two years.</ul>
-        <ul class="otherAnswer">twelve months.</ul>
+      <td>How long does an elephant pregnancy typically last?
+        <ul class="otherAnswer">1 year 6 months.</ul>
+        <ul class="otherAnswer">Nine months.</ul>
+        <ul class="correctAnswer">Two years.</ul>
+        <ul class="otherAnswer">Twelve months.</ul>
       <td><img src="IMG_0075.jpg"/></td>
     </td></tr>
 
     <tr class="question">
       <td><img src="IMG_0099.JPG"/></td>
       <td>A mahout is:
-        <ul class="correctAnswer">An elephant trainer, who is often times with the elephant from a very early age and for their whole lives/ul>
+        <ul class="correctAnswer">An elephant trainer, who is often times with the elephant from a very early age and for their whole lives.</ul>
         <ul class="otherAnswer">A call that elephants make to one another to communicate.</ul>
         <ul class="otherAnswer">A young elephant.</ul>
     </td></tr>
 
     <tr class="question">
       <td>What is a sign of elephant happiness?
-        <ul class="correctAnswer">Trunks up</ul>
-        <ul class="otherAnswer">Wagging their tail</ul>
+        <ul class="correctAnswer">Trunks up.</ul>
+        <ul class="otherAnswer">Wagging their tail.</ul>
+        <ul class="otherAnswer">Charging at you.</ul>
       <td><img src="DSC00611.jpg"/></td>
       </td></tr>
 
     <tr class="question">
       <td><img src="IMG_00251.jpg"/></td>
       <td>When elephants are stolen from the wild, they often end up:
-        <ul class="otherAnswer">at a logging camp.</ul>
-        <ul class="otherAnswer">at a tourist camp providing rides on their backs.</ul>
-        <ul class="otherAnswer">begging on the street for their mahout.</ul>
-        <ul class="otherAnswer">at a circus.</ul>
+        <ul class="otherAnswer">Forced in to submission by abuse.</ul>
+        <ul class="otherAnswer">At a logging camp.</ul>
+        <ul class="otherAnswer">At a tourist camp providing rides on their backs.</ul>
+        <ul class="otherAnswer">Begging on the street for their mahout.</ul>
+        <ul class="otherAnswer">At a circus.</ul>
         <ul class="correctAnswer">Any of the above.</ul>
       </td></tr>
 
