questions hear answers and move to next

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <tr class="question">
       <td><img src="DSC00540.jpg"/></td>
       <td>Q: How much food does/can one adult elephant consume in one day?
-          <ul class="otherAnswer">300+ kg (661&lt lbs).</ul>
-          <ul class="correctAnswer">150-300 kg (330-661 lbs).</ul>
-          <ul class="otherAnswer">Less than 150 kg (&lt330 lbs).</ul>
+        <ul class="otherAnswer">300+ kg (661&lt lbs).</ul>
+        <ul class="correctAnswer">150-300 kg (330-661 lbs).</ul>
+        <ul class="otherAnswer">Less than 150 kg (&lt330 lbs).</ul>
     </td></tr>
 
     <tr class="question">
@@ -37,9 +37,9 @@
         <ul class="otherAnswer">1 year 6 months.</ul>
         <ul class="otherAnswer">Nine months.</ul>
         <ul class="correctAnswer">Two years.</ul>
-        <ul class="otherAnswer">Twelve months.</ul>
+        <ul class="otherAnswer">Twelve months.</ul></td>
       <td><img src="IMG_0075.jpg"/></td>
-    </td></tr>
+    </tr>
 
     <tr class="question">
       <td><img src="IMG_0099.JPG"/></td>
