added NEXT button, changed list of ul tags to li

--- a/index.html
+++ b/index.html
@@ -24,49 +24,69 @@
 
 <div class="gameTime">
   <table>
-    <tr class="question">
+    <tr class="question" id="q1">
       <td><img src="DSC00540.jpg"/></td>
       <td>Q: How much food does/can one adult elephant consume in one day?
-        <ul class="otherAnswer">300+ kg (661&lt lbs).</ul>
-        <ul class="correctAnswer">150-300 kg (330-661 lbs).</ul>
-        <ul class="otherAnswer">Less than 150 kg (&lt330 lbs).</ul>
-    </td></tr>
+        <ul>
+          <li class="otherAnswer">300+ kg (661&lt lbs).</li>
+          <li class="correctAnswer">150-300 kg (330-661 lbs).</li>
+          <li class="otherAnswer">Less than 150 kg (&lt330 lbs).</li>
+        </ul>
+        <div class="next">Next Question!</div>
+      </td>
+    </tr>
 
-    <tr class="question">
+    <tr class="question" id="q2">
       <td>How long does an elephant pregnancy typically last?
-        <ul class="otherAnswer">1 year 6 months.</ul>
-        <ul class="otherAnswer">Nine months.</ul>
-        <ul class="correctAnswer">Two years.</ul>
-        <ul class="otherAnswer">Twelve months.</ul></td>
+        <ul>
+          <li class="otherAnswer">1 year 6 months.</li>
+          <li class="otherAnswer">Nine months.</li>
+          <li class="correctAnswer">Two years.</li>
+          <li class="otherAnswer">Twelve months.</li>
+        </ul>
+        <div class="next">Next Question!</div>
+      </td>
       <td><img src="IMG_0075.jpg"/></td>
     </tr>
 
-    <tr class="question">
+    <tr class="question" id="q3">
       <td><img src="IMG_0099.JPG"/></td>
       <td>A mahout is:
-        <ul class="correctAnswer">An elephant trainer, who is often times with the elephant from a very early age and for their whole lives.</ul>
-        <ul class="otherAnswer">A call that elephants make to one another to communicate.</ul>
-        <ul class="otherAnswer">A young elephant.</ul>
-    </td></tr>
+        <ul>
+          <li class="correctAnswer">An elephant trainer, who is often times with the elephant from a very early age and for their whole lives.</li>
+          <li class="otherAnswer">A call that elephants make to one another to communicate.</li>
+          <li class="otherAnswer">A young elephant.</li>
+        </ul>
+        <div class="next">Next Question!</div>
+      </td>
+    </tr>
 
-    <tr class="question">
+    <tr class="question" id="q4">
       <td>What is a sign of elephant happiness?
-        <ul class="correctAnswer">Trunks up.</ul>
-        <ul class="otherAnswer">Wagging their tail.</ul>
-        <ul class="otherAnswer">Charging at you.</ul>
+        <ul>
+          <li class="correctAnswer">Trunks up.</li>
+          <li class="otherAnswer">Wagging their tail.</li>
+          <li class="otherAnswer">Charging at you.</li>
+        </ul>
+        <div class="next">Next Question!</div>
       <td><img src="DSC00611.jpg"/></td>
-      </td></tr>
+      </td>
+    </tr>
 
-    <tr class="question">
+    <tr class="question" id="q5">
       <td><img src="IMG_00251.jpg"/></td>
       <td>When elephants are stolen from the wild, they often end up:
-        <ul class="otherAnswer">Forced in to submission by abuse.</ul>
-        <ul class="otherAnswer">At a logging camp.</ul>
-        <ul class="otherAnswer">At a tourist camp providing rides on their backs.</ul>
-        <ul class="otherAnswer">Begging on the street for their mahout.</ul>
-        <ul class="otherAnswer">At a circus.</ul>
-        <ul class="correctAnswer">Any of the above.</ul>
-      </td></tr>
+        <ul>
+          <li class="otherAnswer">Forced in to submission by abuse.</li>
+          <li class="otherAnswer">At a logging camp.</li>
+          <li class="otherAnswer">At a tourist camp providing rides on their backs.</li>
+          <li class="otherAnswer">Begging on the street for their mahout.</li>
+          <li class="otherAnswer">At a circus.</li>
+          <li class="correctAnswer">Any of the above.</li>
+        </ul>
+        <div class="next">Next Question!</div>
+      </td>
+    </tr>
 
     <!-- <tr class="question">
       <td>Question six placeholder
