--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <div class="info">
   <p>This is a trivia game about elephants. You'll be presented with one question at a time, and will need to answer in order to move on to the next.
   <p id="important">When you're ready to get started, click the image of the elephant above!</p>
-  <p>If these facts strike your fancy, I recommend checking out <a href="http://www.elephantnaturepark.org">Elephant Nature Park</a>.  Just north of Chiang Mai in Thailand, ENP is an santuary for elephants, founded by Lek Chailert, who rescues elephants in need and provides them a safe haven where they are able to live out their lives free of any work (including tourist rides) and abuse. ENP is also home to dogs, cats and water buffalo.
+</div>
+<div class="enp">If these facts strike your fancy, I recommend checking out <a href="http://www.elephantnaturepark.org">Elephant Nature Park</a>.  Just north of Chiang Mai in Thailand, ENP is an santuary for elephants, founded by Lek Chailert, who rescues elephants in need and provides them a safe haven where they are able to live out their lives free of any work (including tourist rides) and abuse. ENP is also home to dogs, cats and water buffalo.
 </div>
 
 
@@ -26,17 +27,16 @@
   <table>
     <tr class="question" id="q1">
       <td><img src="DSC00540.jpg"/></td>
-      <td>Q: How much food does/can one adult elephant consume in one day?
+      <td>About how much food does one adult elephant consume in one day?
         <ul>
           <li class="otherAnswer">300+ kg (661&lt lbs).</li>
           <li class="correctAnswer">150-300 kg (330-661 lbs).</li>
           <li class="otherAnswer">Less than 150 kg (&lt330 lbs).</li>
         </ul>
-        <div class="next">Next Question!</div>
       </td>
     </tr>
 
-    <tr class="question" id="q2">
+    <!-- <tr class="question" id="q2">
       <td>How long does an elephant pregnancy typically last?
         <ul>
           <li class="otherAnswer">1 year 6 months.</li>
@@ -44,7 +44,6 @@
           <li class="correctAnswer">Two years.</li>
           <li class="otherAnswer">Twelve months.</li>
         </ul>
-        <div class="next">Next Question!</div>
       </td>
       <td><img src="IMG_0075.jpg"/></td>
     </tr>
@@ -57,7 +56,6 @@
           <li class="otherAnswer">A call that elephants make to one another to communicate.</li>
           <li class="otherAnswer">A young elephant.</li>
         </ul>
-        <div class="next">Next Question!</div>
       </td>
     </tr>
 
@@ -68,7 +66,6 @@
           <li class="otherAnswer">Wagging their tail.</li>
           <li class="otherAnswer">Charging at you.</li>
         </ul>
-        <div class="next">Next Question!</div>
       <td><img src="DSC00611.jpg"/></td>
       </td>
     </tr>
@@ -84,36 +81,57 @@
           <li class="otherAnswer">At a circus.</li>
           <li class="correctAnswer">Any of the above.</li>
         </ul>
-        <div class="next">Next Question!</div>
       </td>
     </tr>
 
-    <!-- <tr class="question">
-      <td>Question six placeholder
-        <ul class="correctAnswer">correct answer placeholder</ul>
-        <ul class="otherAnswer">wrong answer placeholder</ul>
-      </td></tr>
+    <tr class="question" id="q6">
+      <td>How many hours a day does an elephant spend eating?
+        <ul>
+          <li class="otherAnswer">5 hours.</li>
+          <li class="otherAnswer">10 hours.</li>
+          <li class="correctAnswer">15 hours.</li>
+          <li class="otherAnswer">20 hours.</li>
+        </ul>
+      </td>
+      <td><img src="feedme.jpg"/></td>
+    </tr>
 
-    <tr class="question">
-      <td>Question seven placeholder
-        <ul class="correctAnswer">correct answer placeholder</ul>
-        <ul class="otherAnswer">wrong answer placeholder</ul>
-      </td></tr>
+    <tr class="question" id="q7">
+      <td><img src="IMG_00271.JPG"/></td>
+      <td>Elephants use their trunk and their feet to detect vibrations in the ground and communicate over long distances.
+        <ul>
+          <li class="correctAnswer">True</li>
+          <li class="otherAnswer">False</li>
+        </ul>
+      </td>
+    </tr>
 
-    <tr class="question">
-      <td>Question eight placeholder
-        <ul class="correctAnswer">correct answer placeholder</ul>
-        <ul class="otherAnswer">wrong answer placeholder</ul>
-      </td></tr>
+    <tr class="question" id="q8">
+      <td>How do elephants stay cool?
+        <ul>
+          <li class="otherAnswer">Buy the trendiest  sunglasses.</li>
+          <li class="otherAnswer">Stay in the shade.</li>
+          <li class="correctAnswer">Throw dirt on their back.</li>
+        </ul>
+      </td>
+      <td><img src="IMG_0104.jpg"/></td>
+    </tr>
 
-    <tr class="question">
-      <td>Question nine placeholder
-        <ul class="correctAnswer">correct answer placeholder</ul>
-        <ul class="otherAnswer">wrong answer placeholder</ul>
-      </td></tr> -->
+    <tr class="question" id="q9">
+      <td>Are elephants social creatures or do they prefer to be alone?
+        <ul>
+          <li class="otherAnswer">They prefer their solitude.</li>
+          <li class="otherAnswer">They tend to only stay with their immediate family.</li>
+          <li class="correctAnswer">They form their own family groups and take care of each other.</li>
+        </ul>
+      </td>
+      <td><img src="social.jpg"/></td>
+    </tr> -->
+
+  </table>
 </div>
-
-
+<p>
+<div class="next">Next Question!</div>
 
 
 <script src="
