--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </td>
     </tr>
 
-    <!-- <tr class="question" id="q2">
+    <tr class="question" id="q2">
       <td>How long does an elephant pregnancy typically last?
         <ul>
           <li class="otherAnswer">1 year 6 months.</li>
@@ -126,7 +126,7 @@
         </ul>
       </td>
       <td><img src="social.jpg"/></td>
-    </tr> -->
+    </tr>
 
   </table>
 </div>
