update some ele content

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 <div class="scoreCard"></div>
 <div class="info">
   <p>This is a trivia game about elephants. You'll be presented with one question at a time, and will need to answer in order to move on to the next.
+  <p>When you chose an answer, it will turn green if it's the correct choice, or red if it's not the answer we were looking for.  In those cases, the correct choice will also show.</p>
   <p id="important">When you're ready to get started, click the image of the elephant above!</p>
 </div>
-<div class="enp">If these facts strike your fancy, I recommend checking out <a href="http://www.elephantnaturepark.org">Elephant Nature Park</a>.  Just north of Chiang Mai in Thailand, ENP is an santuary for elephants, founded by Lek Chailert, who rescues elephants in need and provides them a safe haven where they are able to live out their lives free of any work (including tourist rides) and abuse. ENP is also home to dogs, cats and water buffalo.
+<div class="enp">If these facts strike your fancy, I recommend checking out <a href="http://www.elephantnaturepark.org">Elephant Nature Park</a>.  Just north of Chiang Mai in Thailand, ENP is an santuary for elephants, founded by Lek Chailert, who made it her mission to advocate for elephants on their behalf, rescue the ones in need and provide them a safe haven where they are able to live out their lives free of any work (including tourist rides) and abuse. ENP is also home to dogs, cats and water buffalo.
 </div>
 
 
@@ -27,21 +28,21 @@
   <table>
     <tr class="question" id="q1">
       <td><img src="DSC00540.jpg"/></td>
-      <td>About how much food does one adult elephant consume in one day?
+      <td>About how much food can one adult elephant consume in one day?
         <ul>
-          <li class="otherAnswer">300+ kg (661&lt lbs).</li>
-          <li class="correctAnswer">150-300 kg (330-661 lbs).</li>
-          <li class="otherAnswer">Less than 150 kg (&lt330 lbs).</li>
+          <li class="otherAnswer">601 &lt lbs.</li>
+          <li class="correctAnswer">300-600 lbs.</li>
+          <li class="otherAnswer">&lt 300 lbs.</li>
         </ul>
       </td>
     </tr>
 
-    <tr class="question" id="q2">
-      <td>How long does an elephant pregnancy typically last?
+    <!-- <tr class="question" id="q2">
+      <td>How long does an elephant pregnancy last?
         <ul>
-          <li class="otherAnswer">1 year 6 months.</li>
+          <li class="otherAnswer">1 year 5 months.</li>
           <li class="otherAnswer">Nine months.</li>
-          <li class="correctAnswer">Two years.</li>
+          <li class="correctAnswer">Just under two years.</li>
           <li class="otherAnswer">Twelve months.</li>
         </ul>
       </td>
@@ -79,7 +80,7 @@
           <li class="otherAnswer">At a tourist camp providing rides on their backs.</li>
           <li class="otherAnswer">Begging on the street for their mahout.</li>
           <li class="otherAnswer">At a circus.</li>
-          <li class="correctAnswer">Any of the above.</li>
+          <li class="correctAnswer">All of the above.</li>
         </ul>
       </td>
     </tr>
@@ -122,11 +123,23 @@
         <ul>
           <li class="otherAnswer">They prefer their solitude.</li>
           <li class="otherAnswer">They tend to only stay with their immediate family.</li>
-          <li class="correctAnswer">They form their own family groups and take care of each other.</li>
+          <li class="correctAnswer">Females form their own family groups and raise their young, while the grown male elephants stay mostly to themselves.</li>
         </ul>
       </td>
       <td><img src="social.jpg"/></td>
     </tr>
+
+    <tr class="question" id="q8">
+      <td>There are two species of elephants. One is the african elephant. What is the other?
+        <ul>
+          <li class="otherAnswer">Wee Scottish elephants.</li>
+          <li class="correctAnswer">Asian elephants.</li>
+          <li class="otherAnswer">American elephants.</li>
+          <li class="otherAnswer">Middle Earth elephants.</li>
+        </ul>
+      </td>
+      <td><img src="IMG_0104.jpg"/></td>
+    </tr> -->
 
   </table>
 </div>
