uncommented out the game...

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </td>
     </tr>
 
-    <!-- <tr class="question" id="q2">
+    <tr class="question" id="q2">
       <td>How long does an elephant pregnancy last?
         <ul>
           <li class="otherAnswer">1 year 5 months.</li>
@@ -139,7 +139,7 @@
         </ul>
       </td>
       <td><img src="IMG_0104.jpg"/></td>
-    </tr> -->
+    </tr>
 
   </table>
 </div>
