capitalize image extensions

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="gameTime">
   <table>
     <tr class="question" id="q1">
-      <td><img src="DSC00540.jpg"/></td>
+      <td><img src="DSC00540.JPG"/></td>
       <td>About how much food can one adult elephant consume in one day?
         <ul>
           <li class="otherAnswer">601 &lt lbs.</li>
@@ -46,7 +46,7 @@
           <li class="otherAnswer">Twelve months.</li>
         </ul>
       </td>
-      <td><img src="IMG_0075.jpg"/></td>
+      <td><img src="IMG_0075.JPG"/></td>
     </tr>
 
     <tr class="question" id="q3">
@@ -67,12 +67,12 @@
           <li class="otherAnswer">Wagging their tail.</li>
           <li class="otherAnswer">Charging at you.</li>
         </ul>
-      <td><img src="DSC00611.jpg"/></td>
+      <td><img src="DSC00611.JPG"/></td>
       </td>
     </tr>
 
     <tr class="question" id="q5">
-      <td><img src="IMG_00251.jpg"/></td>
+      <td><img src="IMG_00251.JPG"/></td>
       <td>When elephants are stolen from the wild, they often end up:
         <ul>
           <li class="otherAnswer">Forced in to submission by abuse.</li>
@@ -115,7 +115,7 @@
           <li class="correctAnswer">Throw dirt on their back.</li>
         </ul>
       </td>
-      <td><img src="IMG_0104.jpg"/></td>
+      <td><img src="IMG_0104.JPG"/></td>
     </tr>
 
     <tr class="question" id="q9">
@@ -138,7 +138,7 @@
           <li class="otherAnswer">Middle Earth elephants.</li>
         </ul>
       </td>
-      <td><img src="IMG_0104.jpg"/></td>
+      <td><img src="IMG_0104.JPG"/></td>
     </tr>
 
   </table>
