--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 <h1>Elephant Trivia
-<img src="eleimage.png">
+<img src="eleimage.png" class="icon">
 </h1>
 <div class="scoreCard"></div>
 <div class="info">
