--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 <h1>Elephant Trivia
-<img src="eleimage.png">
+  <img src="eleimage.png"><!-- remember missing alt attribute for the visually impaired -->
 </h1>
 <div class="scoreCard"></div>
 <div class="info">
@@ -25,7 +25,7 @@
 
 
 <div class="gameTime">
-  <table>
+  <table><!-- Prefer a div to a table here. Use CSS to manage the layout and use tables exclusively for tabular data. -->
     <tr class="question" id="q1">
       <td><img src="DSC00540.jpg"/></td>
       <td>About how much food can one adult elephant consume in one day?
@@ -147,7 +147,7 @@
 <div class="next">Next Question!</div>
 
 
-<script src="
+<script src=" <!-- remove new line -->
 https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
 <script src='script.js'></script>
 </body>
